tests/snapshots/test__insta_test@constants.rsh.snap
---
source: tests/test.rs
expression: res
input_file: tests/constants.rsh
---
Ok(Module(
  header: Header(
    version: (1, 0, 0),
    generator: 1920299892,
  ),
  types: [
    Type(
      name: None,
      inner: Vector(
        size: Tri,
        kind: Uint,
        width: 4,
      ),
    ),
    Type(
      name: None,
      inner: Scalar(
        kind: Uint,
        width: 4,
      ),
    ),
  ],
  constants: [
    Constant(
      name: None,
      specialization: None,
      inner: Uint(1),
      ty: 2,
    ),
    Constant(
      name: Some("TRUE_HELP"),
      specialization: None,
      inner: Composite([
        1,
        1,
        1,
      ]),
      ty: 1,
    ),
    Constant(
      name: None,
      specialization: None,
      inner: Uint(2),
      ty: 2,
    ),
    Constant(
      name: Some("FALSE_HELP"),
      specialization: None,
      inner: Composite([
        3,
        3,
        3,
      ]),
      ty: 1,
    ),
    Constant(
      name: Some("HELP"),
      specialization: None,
      inner: Composite([
        3,
        3,
        3,
      ]),
      ty: 1,
    ),
  ],
  global_variables: [],
  functions: [],
  entry_points: {},
))
